make credits image a link to the image.

--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -33,7 +33,7 @@ Title slide: {{client.title_svg|default:"(none)"}}
 </br>
 
 Credits: {{client.credits|default:"(none)(bad!)"}}
-Credits: http://veyepar.ndv.cdn.nextdayvideo.com/veyepar/{{client.slug}}/{{show.slug}}/assets/{{client.credits}}
+Credits: <a href='http://veyepar.ndv.cdn.nextdayvideo.com/veyepar/{{client.slug}}/{{show.slug}}/assets/credits/{{client.credits}}'>{{client.credits}}</a>
 </br>
 </br>
 Host metadata:
