show total cut time in min.

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -59,7 +59,7 @@
     </td>
 </tr>
 <tr>
-    <td>Total cuts_time</td><td>{{ episode.cuts_time }}</td>
+    <td>Total cuts_time</td><td>{{ cuts_time_min }} min.</td>
 </tr>
 
 </tbody>
