--- a/dj/main/templates/show_shortcuts.html
+++ b/dj/main/templates/show_shortcuts.html
@@ -6,7 +6,12 @@
 <td><a href="{% url "pdfs" 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a>
 <a href="{% url "pdfs" 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf?day={{now|date:"d"}}">today's</a>
 <a href="{% url "pdfs" 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf?day={{now|date:"d"|add:"1"}}">t+1</a>
+<a href = "{% url "episodes_reschedule" show.id %}">Reschedule</a>
 </td>
-<td><a href="{% url "schedule" show.id show.slug %}">schedule</a></td>
+<td>
+  <a href="{% url "schedule" show.id show.slug %}">schedule</a>
+  <a href="{% url "pdfs" 'talk_intro' show.id %}{{show.slug}}_talk_intro.pdf">talk_intro.pdf</a>
+</td>
+
 <td><a href="{% url 'title_slides' show.id %}">title slides</a></td>
 <td><a href="{% url "show_anomalies" show.id %}" title="{{show.name}}">anomalies</a></td>
