tie veyepar.cfg link to the show.

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -59,7 +59,7 @@
         <a href="{% url "mk_episode" show.id %}">mk_episode</a>
     </td>
     <td>
-        <a href="{% url "veyepar_cfg" %}">veyepar.cfg</a>
+        <a href="{% url "veyepar_cfg" show.id %}">veyepar.cfg</a>
     </td>
 </tr>
 <tr>{% include "show_shortcuts.html" %}</tr>
