Add legend to show_stats page.

--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -126,4 +126,13 @@
         {% endfor %}
 
     </table>
+    Legend:</br>
+    red = not as much video data as expected.</br>
+    green = about right.</br>
+    yellow = way more data than expected.</br>
+    </br>
+    ~ found a file that doesn't contain any scheduled episodes.</br>
+    . file that contains scheduled epsiodes.</br>
+    ! missing file!  (there is scheduled episodes, but no file)</br>
+    </br>
 {% endblock %}
