--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -127,9 +127,9 @@
 
     </table>
     Legend:</br>
-    red = not as much video data as expected.</br>
-    green = about right.</br>
-    yellow = way more data than expected.</br>
+    red = not as much gigs of raw video as expected.</br>
+    pink = expect more, but maybe OK.  look for !'s.
+    yellow = more video data than expected.</br>
     </br>
     ~ found a file that doesn't contain any scheduled episodes.</br>
     . file that contains scheduled epsiodes.</br>
