--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -128,7 +128,7 @@
     </table>
     Legend:</br>
     red = not as much gigs of raw video as expected.</br>
-    pink = expect more, but maybe OK.  look for !'s.
+    pink = expect more, but maybe OK.  look for !'s.</br>
     yellow = more video data than expected.</br>
     </br>
     ~ found a file that doesn't contain any scheduled episodes.</br>
