--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -11,18 +11,18 @@
 {% endblock %}
 
 {% block content %}
-Name: <b>{{episode.name}}</b></br/>
+Name: <b>{{episode.name}}</b><br>
 
 --client <a href="{% url "client" client.slug %}">{{ client.slug }}</a>
 --show <a href="{% url "episode_list" client.slug show.slug%}">{{ show.slug }}</a> --room {{episode.location.slug}} {{episode.id}} --force
-<br/>
+<br>
 
 {% if prev_episode %}
   <a href="/main/E/{{ prev_episode.id }}">Prev: {{prev_episode.state }} {{prev_episode.name }}</a>
 {% else %}
   Prev: (none, at start of list)
 {% endif %}
-<br/>
+<br>
 {% if next_episode %}
 <a href="/main/E/{{ next_episode.id }}">Next: {{next_episode.state }} {{next_episode.name }}</a>
 {% else %}
@@ -69,7 +69,7 @@ Name: <b>{{episode.name}}</b></br/>
 </table>
 
 {% if episode.conf_url %}
-  <a href="{{episode.conf_url}}">{{episode.conf_url}}</a><br/>
+  <a href="{{episode.conf_url}}">{{episode.conf_url}}</a><br>
 {% endif %}
 
 {% if episode.edit_key and user.is_authenticated %}
@@ -77,7 +77,7 @@ Name: <b>{{episode.name}}</b></br/>
 
    <a href="{% url "train" episode.id episode.slug episode.edit_key %}">train</a>
    <a href="{% url "approve_episode" episode.id episode.slug episode.edit_key %}">approve</a>
-   <br/>
+   <br>
 {% endif %}
 
 {% if episode.public_url %}
@@ -85,7 +85,7 @@ Name: <b>{{episode.name}}</b></br/>
    {% for ext in exts %}
 
    <img src ="{{MEDIA_URL}}{{episode.show.client.slug}}/{{episode.show.slug}}/{{ext}}/{{episode.slug}}.{{ext}}.wav.png" alt="final audio" onerror="this.style.display='none'" />
-   <br/>
+   <br>
 
     {% endfor %}
 
@@ -102,7 +102,7 @@ Name: <b>{{episode.name}}</b></br/>
 {% if episode.twitter_url%}<a href="{{episode.twitter_url}}">tweet</a>{%endif%}
 
 <a href="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.svg"> svg</a>
-<a href="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.png"> png</a><br/>
+<a href="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.png"> png</a><br>
 
 {% for ext in exts %}
    <a href="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/{{ext}}/{{episode.slug}}.{{ext}}">{{ext}}</a>
@@ -113,8 +113,8 @@ Name: <b>{{episode.name}}</b></br/>
 <a href="{% url "pdf" 'release_agreements' show.id episode.id %}{{episode.slug}}.pdf">release.pdf</a>
 
 <a href="{% url "eps_xfer" episode.show.client.slug episode.show.slug %}?id={{episode.id}}">{{episode.slug}}.json</a>
-<br/>
-<a href="{% url "episode_logs" episode.id %}">logs</a><br/>
+<br>
+<a href="{% url "episode_logs" episode.id %}">logs</a><br>
 
 Admin:
 <a href="{% url "admin:main_episode_change" episode.id%}">episode</a>
@@ -269,7 +269,7 @@ $(".viewer").zoomer();
             <tr>
                 <td>
    {% for ext in exts %}
-   <a href="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.{{ext}}" target={{ext}}>{{ext}}</a><br/>
+   <a href="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.{{ext}}" target={{ext}}>{{ext}}</a><br>
    <a href="{% url "mk_play_list" %}?url={{MEDIA_URL}}{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}.{{ext}}">{{ext}}.m3u</a>
                 {% endfor %}
   </td>
