--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -398,11 +398,10 @@ $(".viewer").zoomer();
   {%endif%}
 {%endfor%}
 
+<br>
 {% for rf in rfs %}
-
   <img id="audio_image_{{rf.id}}" alt="audio viz" onerror="this.style.display='none'"
-    src ="{{MEDIA_URL}}{{rf.show.client.slug}}/{{rf.show.slug}}/dv/{{rf.location.slug}}/{{rf.filename}}.wav.png">
-
+                                                  src ="{{MEDIA_URL}}{{rf.show.client.slug}}/{{rf.show.slug}}/dv/{{rf.location.slug}}/{{rf.filename}}.wav.png"><br>
 {% endfor %}
 
 {% endblock %}
