clean up html errors

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -4,13 +4,13 @@
 <head>
 <meta charset="utf-8" />
 
-<script type="text/javascript" src="{{STATIC_URL}}admin/js/urlify.js"></script>
+<script src="{{STATIC_URL}}admin/js/urlify.js"></script>
 
-<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/jquery.cookie.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
+<script src="{{STATIC_URL}}js/jquery-1.11.0.min.js"></script>
+<script src="{{STATIC_URL}}js/jquery-ui.min.js"></script>
+<script src="{{STATIC_URL}}js/jquery.cookie.js"></script>
+<script src="{{STATIC_URL}}js/login_form.js"></script>
+<script src="{{STATIC_URL}}js/fnitize.js"></script>
 
 <link rel="vcs-git" href="https://github.com/CarlFK/veyepar.git" title="Veyepar git repository" />
 <link rel="vcs-git" href="git@github.com:CarlFK/veyepar.git" title="Veyepar git repository" />
