--- a/dj/main/static/css/hideme.css
+++ b/dj/main/static/css/hideme.css
@@ -2,14 +2,14 @@
  show/hide the cutlist detail that is normally not needed.
 */
 
-.ep-detail {
+.ep-showmore:not(:checked) ~ .ep-summary ~ .ep-detail {
   max-height: 30px;
   overflow: hidden;
-  transition: max-height 0.4s ease;
-}
+   transition: max-height 1.4s ease;
+ }
 
-.ep-showmore:checked ~ .ep-summary ~ .ep-detail {
-    max-height: 1200px;
+ .ep-detail {
+      transition: max-height 1.4s ease;
 }
 
 .cl-detail {
