Fix typo spotted by @hodgestar

--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -40,7 +40,7 @@ Tags:
 {{show.tags}} - {{client.tags}}
 </br>
 </br>
-Description of event appened to each talk's description:</br>
+Description of event append to each talk's description:</br>
 </br>
 {{show.description|default:"(none show)"}}
 </br>
