--- a/dj/main/templates/approve/base.html
+++ b/dj/main/templates/approve/base.html
@@ -10,18 +10,21 @@
 <tr><td>Name</td><td><b>{{episode.name}}</b></td></tr>
 <tr><td>Presenter(s)</td><td>{{episode.authors}} </td></tr>
 <tr><td>Location</td><td>{{episode.location}} </td></tr>
-<tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
+<tr><td>Date</td><td>{{episode.start|date:"M D d"}}</td></tr>
 </tbody>
 </table>
 {% if episode.public_url %}
     <a href="{{episode.public_url}}">{{episode.public_url}}</a>
 {% else %}
     {% if episode.host_url %}
-      <a href="{{episode.host_url}}">{{episode.host_url}}</a>
+    <a href="{{episode.host_url}}">{{episode.host_url}}</a><br>
+    {% endif %}
+    {% if episode.archive_mp4_url %}
+    <a href="{{episode.archive_mp4_url}}">{{episode.archive_mp4_url}}</a><br>
     {% endif %}
 {% endif %}
 
-{% block point  %}
+{% block point %}
 {% endblock %}
 
 {% if episode.comment %}
