--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -115,6 +115,7 @@
                  <span class="left">
                    <a style="display: inline-block;" href="{% url "raw_file_audio" %}?show_id={{show.id}}&location_slug={{loc.loc.slug}}&start_date={{item.date|date:"Y-m-d"}}">audio</a>
                      <a style="display: inline-block;" href="{% url "public_play_list" %}playlist.m3u?client={{client.slug}}&show={{show.slug}}&location_slug={{loc.loc.slug}}&date={{item.date|date:"Y-m-d"}}">encs</a>
+                     <a style="display: inline-block;" href="{% url "episodes_reschedule" show_id=show.id %}?location={{item.loc.slug}}&day={{item.date|date:"d"}}">r</a>
                  </span>
 
                {% endif %}
