--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -17,7 +17,7 @@
         <a href="{% url "orphan_img" show.id %}">orphan_img</a>
     </td>
     <td>
-        <a href="{% url "episode_list" client.slug show.slug%}?slugoh">slug oh!</a>
+        <a href="{% url "slugoh" show.id%}?slugoh">slug oh!</a>
     </tr>
 
 <tr>
