--- a/dj/main/templates/episodes_slugoh.html
+++ b/dj/main/templates/episodes_slugoh.html
@@ -16,6 +16,7 @@
         <th>state</th>
         <th>episode.name<br>
             episode.slug</th>
+        <th title="comment size"><a href="?comment=1">cmt</a></th>
         <th>released</th>
         <th>yt<br>mp4</th>
       </tr>
@@ -30,7 +31,8 @@
  <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}<br>
     {{episode.slug}}</a>
         </td>
-        <td>{{episode.released}}</td>
+        <td style="white-space:normal"><a href="E/{{episode.id}}/#id_comment" title="{{episode.comment}}">{{episode.comment|length|default:""}}</a></td>
+        <td>{{episode.released|yesno:"Y,N"}}</td>
         <td>
             {%if episode.host_url %}<a href="{{episode.host_url}}">Y</a>{% endif %}
             {%if episode.public_url %}<a href="{{episode.public_url}}">R</a>{% endif %}
