--- a/dj/main/templates/episodes_slugoh.html
+++ b/dj/main/templates/episodes_slugoh.html
@@ -15,6 +15,7 @@
         <th>start</th>
         <th>state</th>
         <th>episode.name<br>
+            episode.name.title<br>
             episode.slug</th>
         <th title="comment size"><a href="?comment=1">cmt</a></th>
         <th>released</th>
@@ -28,7 +29,9 @@
         <td><a href="{{episode.conf_url}}">{{episode.conf_key}}</a></td>
  <td>{{episode.start|date:"D d H:i"}}</td>
  <td>{{episode.state}}{{episode.locked|yesno:"*, "}}</td>
+
  <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}<br>
+    {{episode.titlecase}}<br>
     {{episode.slug}}</a>
         </td>
         <td style="white-space:normal"><a href="E/{{episode.id}}/#id_comment" title="{{episode.comment}}">{{episode.comment|length|default:""}}</a></td>
