New York Times Manual...

--- a/dj/main/templates/episodes_slugoh.html
+++ b/dj/main/templates/episodes_slugoh.html
@@ -15,7 +15,7 @@
         <th>start</th>
         <th>state</th>
         <th>episode.name<br>
-            episode.name.title<br>
+            episode.name New York Times Manual of Style<br>
             episode.slug</th>
         <th title="comment size"><a href="?comment=1">cmt</a></th>
         <th>released</th>
