title case checker.

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -18,6 +18,7 @@
     </td>
     <td>
         <a href="{% url "slugoh" show.id%}?slugoh">slug oh!</a>
+        <a href="{% url "slugoh" show.id%}?titleoh">title oh!</a>
     </tr>
 
 <tr>
