--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -10,7 +10,9 @@ Show: <a href="{% url "episode_list" client.slug show.slug %}">{{ show.name }}</
 
 Rooms:
 {% for location in locations %}
-<a href="{% url "admin:main_location_change" location.id%}">{{location.name}}</a>, {% endfor %}
+<a href="{% url "admin:main_location_change" location.id%}">{{location.name}}</a>
+{% if location.lat %}<a href="http://maps.google.com/?q={{location.lat}},{{location.lon}}">map</a>{% endif %},
+{% endfor %}
 </br>
 </br>
 
