--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -229,10 +229,7 @@ $(".viewer").zoomer();
 
   {{cl.comment}}
 
-  <div class="cl-detail">
-      {{clrfform.clid}}
-
-      vlc ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}} :start-time=0{{cl.get_start_seconds}}
+  <div class="cl-detail">{{clrfform.clid}}vlc ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}} :start-time=0{{cl.get_start_seconds}}
       <table>
       <tr>
       <td>
